--- a/admin.css
+++ b/admin.css
@@ -1,5 +1,5 @@
 .buttons {
-    background-color: beige;
+    background-color: whitesmoke;
 }
 
 
@@ -31,9 +31,45 @@
 
 
 
-.client-request {
-    background-color: cadetblue;
+.client-request h4{
+   text-align: center;
+    
 }
+.client-request section {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 2px 10px;
+}
+.client-request .date {
+    text-align: right;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+.client-request .request-details {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: 0px;
+    padding: 0px;
+}
+.request-details ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+.request-details ul li{
+    white-space: nowrap;
+}
+.request-details .client-message {
+    text-align: center;
+}
+
+
+
+
+
+
+
 
 @media screen and (min-width : 600px) {
     .buttons ul {
@@ -44,5 +80,9 @@
     }
     .buttons ul li {
         width: 400px;
+    }
+    .request-details ul {
+        margin: 10px;
+        padding: 20px;
     }
 }
