--- a/admin.css
+++ b/admin.css
@@ -1,7 +1,3 @@
-.buttons {
-    background-color: whitesmoke;
-}
-
 
 .buttons ul {
     list-style-type: none;
@@ -25,6 +21,10 @@
     cursor: pointer;
 
 }
+.buttons ul li a {
+    text-decoration: none;
+    color: white;
+}
 .buttons ul li:hover {
     filter: brightness(50%);
 }
@@ -38,7 +38,7 @@
 .client-request section {
     border: 1px solid black;
     border-radius: 5px;
-    margin: 2px 10px;
+    margin: 10px 10px;
 }
 .client-request .date {
     text-align: right;
@@ -60,14 +60,10 @@
 .request-details ul li{
     white-space: nowrap;
 }
-.request-details .client-message {
+.client-message {
     text-align: center;
+    align-items: center;
 }
-
-
-
-
-
 
 
 
