--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,10 @@
+.buttons .logout {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
 .buttons .logout a {
     text-decoration: none;
     color: white;
